[package]
name = "atlas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
etagere = "0.2.8"
guillotiere = "0.6.2"
image = "0.24.7"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
